<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.shreygupta.doctoronthego.DoctorSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_doctor"
            android:textColor="@color/colorText"
            android:textSize="30sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_in_desc_doctor"/>

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/doctor_reg_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_1"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/doctor_reg_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_2"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/doctor_reg_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_3"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/doctor_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_4"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/doctor_reg_con_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_5"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <Button
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_1"
            android:textColor="@color/white"
            android:background="@color/colorButton"/>

    </LinearLayout>

</ScrollView>
