<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.shreygupta.doctoronthego.AdminSignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_admin"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:layout_marginBottom="50dp"/>



        <EditText
            android:id="@+id/admin_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_3"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/admin_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_hint_4"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/admin_signin_button"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_button_1"
            android:textColor="@color/white"
            android:background="@color/colorButton"/>

        <Button
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/signin_button_2"
            android:textColor="@color/colorButton"
            android:layout_gravity="center"/>

    </LinearLayout>


</ScrollView>
