<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.shreygupta.doctoronthego.ClientChooseActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <ImageButton
            android:contentDescription="@string/client_choose_img_1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/patient"
            android:id="@+id/patient_activity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:clickable="false"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:text="@string/client_choose_button_1"
            android:textColor="@color/colorText">
        </TextView>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <ImageButton
            android:contentDescription="@string/client_choose_img_2"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/doctor"
            android:id="@+id/doctor_activity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:clickable="false"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:text="@string/client_choose_button_2"
            android:textColor="@color/colorText">
        </TextView>

    </FrameLayout>

</LinearLayout>